--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,25 @@ requests = "^2.24.0"
 install = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^5.4.3"
+coverage = {extras = ["toml"], version = "^5.1"}
+pytest-cov = "^2.10.0"
+pytest-mock = "^3.1.1"
 
 
 [tool.poetry.scripts]
 wikipedia-python = "wikipedia_python.console:main"
 
+[tool.coverage.paths]
+source = ["src", "*/site-packages"]
+
+[tool.coverage.run]
+branch = true
+source = ["wikipedia_python"]
+
+[tool.coverage.report]
+show_missing = true
+fail_under = 100
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
